# chromospyce

./: .gitignore  README.md  arraydata.arrow  deno.json  example.ipynb  minimal-example.ipynb  package-lock.json  package.json  pyproject.toml
js/: widget.ts
sample_data/: pdb.arrow  test.arrow  test.xyz
src/chromospyce/: __init__.py
src/chromospyce/static/: widget.css  widget.js
