[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chromospyce"
version = "0.0.5"
dependencies = [
    "anywidget>=0.9.13",
]
readme = "README.md"
requires-python = ">=3.8"

[tool.uv]
dev-dependencies = [
    "jupyterlab>=4.2.5",
    "numpy",
    "chromospyce",
    "pyarrow",
    "watchfiles",
]

[tool.uv.sources]
chromospyce = { workspace = true }
