[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chromospyce"
version = "0.1.1"
dependencies = [
    "anywidget>=0.9.13",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "pyarrow>=17.0.0",
]
readme = "README.md"
requires-python = ">=3.8"

[tool.uv]
dev-dependencies = [
    "jupyterlab>=4.2.5",
    "numpy",
    "chromospyce",
    "pyarrow",
    "watchfiles",
    "nbconvert",
]

[tool.uv.sources]
chromospyce = { workspace = true }
